<resources>
    <string name="app_name">Notifications</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    //notifications screen
    <string name="no_notifications">There is no notifications</string>
    <string name="notification_description">from %1$s to %2$s | Every %3$s min</string>
    <string name="loading"> Loading…</string>

    //add notification screen
    <string name="action">Action</string>
    <string name="interval">Interval</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_every">repeat every</string>
    <string name="minutes">minutes</string>
    <string name="save">Save</string>
    <string name="successful_creating">Successful creating</string>
</resources>