<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                app:theme="@style/Theme.AppCompat.NoActionBar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:text="@string/cancel"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/ordinary_text_size" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/action"
            android:textColor="@color/blue"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintBottom_toTopOf="@id/spinnerAction"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            app:layout_constraintBottom_toTopOf="@id/tvInterval"
            app:layout_constraintTop_toBottomOf="@id/tvAction" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/interval"
            android:textColor="@color/blue"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintBottom_toTopOf="@id/tvFrom"
            app:layout_constraintTop_toBottomOf="@id/spinnerAction"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFrom"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_size"
            android:layout_marginStart="@dimen/view_margin"
            android:gravity="center"
            android:text="@string/from"
            android:textColor="@color/grey"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toTopOf="@id/tvRepeat"
            app:layout_constraintEnd_toStartOf="@id/etStartTime"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInterval" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStartTime"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="@dimen/edit_text_size"
            android:editable="false"
            android:inputType="none"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toTopOf="@id/tvRepeat"
            app:layout_constraintEnd_toStartOf="@id/tvTo"
            app:layout_constraintStart_toEndOf="@id/tvFrom"
            app:layout_constraintTop_toBottomOf="@id/tvInterval"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_size"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="@color/grey"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toTopOf="@id/tvRepeat"
            app:layout_constraintEnd_toStartOf="@id/etEndTime"
            app:layout_constraintStart_toEndOf="@id/etStartTime"
            app:layout_constraintTop_toBottomOf="@id/tvInterval"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEndTime"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="@dimen/edit_text_size"
            android:editable="false"
            android:inputType="none"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toTopOf="@id/tvRepeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTo"
            app:layout_constraintTop_toBottomOf="@id/tvInterval"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:text="@string/repeat"
            android:textColor="@color/blue"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintBottom_toTopOf="@id/tvRepeatEvery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFrom" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRepeatEvery"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_size"
            android:layout_marginStart="@dimen/view_margin"
            android:gravity="center"
            android:text="@string/repeat_every"
            android:textColor="@color/grey"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etRepeat"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepeat" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRepeat"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="@dimen/edit_text_size"
            android:inputType="time"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvMinutes"
            app:layout_constraintStart_toEndOf="@id/tvRepeatEvery"
            app:layout_constraintTop_toBottomOf="@id/tvRepeat"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMinutes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_size"
            android:gravity="center"
            android:text="@string/minutes"
            android:textColor="@color/grey"
            android:textSize="@dimen/ordinary_text_size"
            app:layout_constraintBottom_toTopOf="@id/bSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etRepeat"
            app:layout_constraintTop_toBottomOf="@id/tvRepeat"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:background="@drawable/white_button_border"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepeatEvery"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>